--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section id="inicio" class="hero-section">
             <div class="video-background">
-                <video autoplay loop muted poster="hero-poster-fallback.jpg">
+                <video loop muted poster="hero-poster-fallback.jpg">
                     <source src="video.mp4" type="video/mp4">
                     Tu navegador no soporta el tag de video.
                 </video>
@@ -305,10 +305,10 @@
 
         <div class="history-text">
             <p>
-                Depuis ses débuts, le voyage de [Nom de la Chanteuse] a été une quête incessante d'authenticité et d'expression. Née dans la périphérie de [Ville], elle a transformé les mélodies de sa jeunesse en un son unique qui mélange le rêve, le surréel et le néon.
+                Depuis ses débuts, le parcours d'Angeli est une quête incessante d'authenticité et d'expression personnelle. Née de l'imagerie 3.0 et de l'intelligence artificielle, elle a transformé des mélodies envoûtantes en un son unique, mêlant onirisme, surréalisme et néons.
             </p>
             <p>
-                Ses premières œuvres étaient des murmures dans le noir ; aujourd'hui, sa voix résonne dans de grandes scènes, mais le cœur de son art reste le même : une honnêteté brutale reflétée à travers un prisme futuriste. Le lancement de son deuxième album n'est pas seulement un événement musical, c'est un chapitre où elle nous invite à parcourir son évolution, de l'ombre à la lumière.
+                Ses premières œuvres étaient des murmures dans l'obscurité ; aujourd'hui, sa voix résonne sur les réseaux sociaux, mais l'essence de son art demeure inchangée : une sincérité absolue reflétée à travers un prisme futuriste. La sortie de son deuxième album est bien plus qu'un simple événement musical ; c'est un chapitre qui nous invite à explorer son évolution, des ténèbres à la lumière.
             </p>
             <p class="signature">— Le Voyage Continue</p>
         </div>
@@ -318,8 +318,7 @@
         <section id="contacto" class="content-section">
     <h2 class="section-title">Contact | Laissez un message</h2>
     
-    <div class="contact-form-container">
-        <form action="#" method="POST" class="contact-form">
+    <form action="mailto:oaamendoza1972@gmail.com" method="POST" enctype="text/plain"            class="contact-form">
             
             <div class="form-group">
                 <label for="name">Votre Nom (Name)</label>
@@ -363,7 +362,9 @@
             <img id="lightbox-image" src="" alt="Imagen ampliada de la artista">
         </div>
     </div>
-
+    <button id="backToTopBtn" aria-label="Volver al inicio de la página" title="Volver a Inicio">
+    <i class="fas fa-arrow-up"></i>
+</button>
     <script src="script.js"></script>
 </body>
 </html>
