--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <h3 class="video-title">Cyanure dans le thé</h3>
         </div>
 
-        <div class="video-item" data-video-src="https://www.youtube.com/embed/gC1Tha1UYx0">
+        <div class="video-item" data-video-src="https://www.youtube.com/embed/U-1t5SFYtCQ">
             <div class="video-thumbnail" style="background-image: url('img/vids-el_eco_del_ayer.png');">
                 <div class="play-icon"><i class="fas fa-play"></i></div>
             </div>
@@ -332,7 +332,7 @@
 
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" required placeholder="Écrivez votre message ici..."></textarea>
+                <textarea id="message" name="message" rows="5" required placeholder="Écrivez votre message aquí..."></textarea>
             </div>
 
             <button type="submit" class="submit-btn">Envoyer le Message <i class="fas fa-paper-plane"></i></button>
@@ -341,7 +341,15 @@
     </div>
 </section>
 
-    </main>
+        <section id="counter-section" class="content-section">
+            <div class="visitor-counter">
+                <p>Visitas a la página</p>
+                <img src="https://www.hit-counter.info/hit.php?id=3456789&counter=3&mode=dark&rgb=00ffff" 
+                     alt="Contador de Visitas" 
+                     aria-label="Número de visitantes a la web">
+            </div>
+        </section>
+        </main>
 
     <footer class="social-footer" aria-label="Redes Sociales de la Artista">
         <a href="https://x.com/oaamendoza1972" target="_blank" rel="noopener noreferrer" aria-label="Twitter/X"><i class="fab fa-twitter"></i></a>
